Fix layout issue

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -59,19 +59,21 @@ p {
 /* NAVBAR PROPERTIES */
 
 .topbar {
+  overflow: hidden;
+  position: fixed;
+  top: 0;
   width: 100%;
-  height: 100%;
+  background-color: #FFF;
 }
 
 .middle {
-  
+  margin-top: 30px;
 }
 
 .navbar {
   height: 100%;
   width: 72px;
   position: fixed;
-  top: 32px;
   left: 0;
   border-right: 1px solid #ddd;
 }
@@ -114,6 +116,7 @@ p {
 
 .navbar-link-active {
   border-right: 3px solid #000;
+  background-color: #f5f5f5;
   opacity: 1;
 }
 
@@ -144,9 +147,12 @@ p {
 
 @media screen and (min-width: 1200px) {
   
+  .middle {
+    margin-top: 61px;
+  }
+
   .navbar {
     width: 240px;
-    top: 61px;
   }
 
   .navbar-brand {
